fixed nav-menu on mobile

--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -91,7 +91,8 @@
 	/* Nav */
 	.nav {
 		width: 100%;
-		min-height: calc(100vh - 50px);
+		height: calc(100vh - 50px);
+		overflow: auto;
 		padding-top: 9px;
 		flex-direction: column;
 		position: absolute;
